<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#110299"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_weight="0.1"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:padding="0dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:layout_weight="0.1"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:padding="0dp"
            android:orientation="vertical">

        </LinearLayout>


        <LinearLayout
            android:layout_weight="0.8"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:padding="0dp"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:text="@string/txt_app_name"
                android:textSize="30dp"
                android:textColor="#FFFF00"
                android:layout_gravity="center"
                android:gravity="bottom" />

        </LinearLayout>

        <LinearLayout
            android:layout_weight="0.1"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:padding="0dp"
            android:orientation="vertical">

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_weight="0.4"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:padding="0dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:layout_weight="0.1"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:padding="0dp"
            android:orientation="vertical">

        </LinearLayout>


        <LinearLayout
            android:layout_weight="0.8"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:padding="0dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/learnmixer_logo"
                android:layout_gravity="center"
                android:padding="0dp"
                android:src="@drawable/learnmixer_logo"/>

        </LinearLayout>


        <LinearLayout
            android:layout_weight="0.1"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:padding="0dp"
            android:orientation="vertical">

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_weight="0.1"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:padding="0dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:layout_weight="0.1"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:padding="0dp"
            android:orientation="vertical">

        </LinearLayout>


        <LinearLayout
            android:layout_weight="0.8"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:padding="0dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/txt_username"
                android:textSize="15dp"
                android:textColor="#FFFF00"
                android:layout_gravity="center" />

            <EditText
                android:id="@+id/edit_message1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:textSize="@dimen/abc_text_size_body_1_material"
                android:hint="@string/edit_message1"
                android:layout_gravity="center" />

        </LinearLayout>


        <LinearLayout
            android:layout_weight="0.1"
            android:layout_width="30dp"
            android:layout_height="match_parent"

            android:padding="0dp"
            android:orientation="vertical">

        </LinearLayout>

    </LinearLayout>



    <LinearLayout
        android:layout_weight="0.1"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:padding="0dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:layout_weight="0.1"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:padding="0dp"
            android:orientation="vertical">

        </LinearLayout>


        <LinearLayout
            android:layout_weight="0.8"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:padding="0dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/txt_password"
                android:textSize="15dp"
                android:textColor="#FFFF00"
                android:layout_gravity="center" />

            <EditText
                android:id="@+id/edit_message2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:textSize="@dimen/abc_text_size_body_2_material"
                android:hint="@string/edit_message2"
                android:layout_gravity="center"/>
        </LinearLayout>


        <LinearLayout
            android:layout_weight="0.1"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:padding="0dp"
            android:orientation="vertical">

        </LinearLayout>

    </LinearLayout>



    <LinearLayout
        android:layout_weight="0.1"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:padding="0dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:layout_weight="0.2"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:padding="0dp"
            android:orientation="vertical">

        </LinearLayout>


        <LinearLayout
            android:layout_weight="0.6"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:padding="0dp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:weightSum="1">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_login"
                android:textColor="#FFFF00"
                android:background="#484940"
                android:layout_gravity="center" />
        </LinearLayout>


        <LinearLayout
            android:layout_weight="0.2"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:padding="0dp"
            android:orientation="vertical">

        </LinearLayout>

    </LinearLayout>




    <LinearLayout
        android:layout_weight="0.2"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:padding="0dp"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_weight="0.1"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:padding="0dp"
            android:orientation="vertical">

        </LinearLayout>


        <LinearLayout
            android:layout_weight="0.8"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:padding="0dp"
            android:orientation="horizontal">

        </LinearLayout>


        <LinearLayout
            android:layout_weight="0.1"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:padding="0dp"
            android:orientation="horizontal">

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
